# ArkUI_demo

./: log.txt
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: build-profile.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp  video_stream_handler.cpp  video_stream_handler.h
entry/src/main/cpp/common/: common.h
entry/src/main/cpp/manager/: plugin_manager.cpp  plugin_manager.h
entry/src/main/cpp/render/: audio_render.cpp  audio_render.h  egl_core.cpp  egl_core.h  frame_buffer_queue.cpp  frame_buffer_queue.h  plugin_render.cpp  plugin_render.h
entry/src/main/cpp/types/libentry/: Index.d.ts
entry/src/main/ets/pages/: Index.ets
entry/src/main/resources/base/element/: string.json
entry/src/main/resources/rawfile/: frame.yuv
